* Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.2
- remove a file breaking build
* Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.1
- use the Python logging module for all logging in modRana
 - so we now have nice logging levels, module indicators and messages from threads look nice :)
 - also the log file has timestamps and does not mis any early log messages
 - unlike before, log messages are both in log file _and_ in console
 - and the Qt 5 GUI even forwards all log messages to the Python log :)
 - the log file can be enabled and disabled from the Qt 5 GUI
 - there is also full path to the log displayed in the Qt 5 GUI
- it is now possible to use the volume rocker for map zoom on Sailfish OS
- the Options->Map screen in QT 5 GUI now shows path to the map data folder and free space in the folder
- it is now possible to tell modRana to always start in fullscreen
- it is now posible to tell modRana to always show a quit button in the main menu in GTK GUI
- tunables have been exportend for various modRana mechanisms in the GTK GUI
 - the main aim is to enable users to debug or workaround crashes that have been reported on the N900
 - auto dl thread count, batch dl thread count, auto dl queue size, in memory tile cache size, Sqlite tile database commit period
 - use with care and report you findings! :)
- the Sqlite tile database now logs number of commited tiles
- various code cleanum and refactoring
* Mon Jul 28 2014 Martin Kolman <martin.kolman@gmail.com> - 0.48.2
- add a missing module to the Sailfish OS package
* Mon Jul 28 2014 Martin Kolman <martin.kolman@gmail.com> - 0.48.1
- added persistent overlay configuration support in Qt 5 GUI
- aproximate batch download size is now displayed during batch download in GTK GUI
- location debuging support in Qt 5 GUI
- fixed zoom level not being saved in Qt 5 GUI
- fixed current track logging settings not being displayed properly in GTK GUI
- fixed URL for the Map1.eu map layer