@@ -1,3 +1,11 @@
+modrana (0.49.3) stable; urgency=low
+
+  * Wed Oct 08 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.3
+  *  - add a map screen compass rose
+  *   - it can be turned on/off and its opacity changed in Options->UI
+
+ -- Martin Kolman <martin.kolman@gmail.com>  Wed, 08 Oct 2014 02:11:42 +0000
+
 modrana (0.49.2) stable; urgency=low
 
   * Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.2
